--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#" ng-click="about()">AngularChat</a>
+        <a class="navbar-brand" href="#" ng-click="about()">HyperChat</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -120,15 +120,15 @@
   <!-- about modal -->
   <script type="text/ng-template" id="aboutModal" />
   <div class="modal-header">
-    <h3>About AngularChat</h3>
+    <h3>About HyperChat</h3>
   </div>
   <div class="modal-body">
-    <p>Hello and thanks for visiting AngularChat.</p>
-    <p>This is an experimental project for testing new JavaScript technologies.</p>
+    <p>Hello and thanks for using HyperChat.</p>
+    <p>This is an experimental project for teamwork.</p>
     <p>First, please enter your username. Once you've done this you have two options. You can create a room or you can join an already existing one.</p>
     <p>Please note that once you've joined a room you can't create one (basically you can be part of one room at one time). Also note that if you're a room owner and you disconnect from the server, delete or leave your room all other participants will be removed from the room as well.</p>
-    <p>If you'd like to read more about the project please check out this article: <a href="http://tamas.io/angularchat/">http://tamas.io/angularchat/</a></p>
-    <p>If you're interested in the code behind this project, please go to: <a href="https://github.com/tamaspiros/angularchat" target="_blank">https://github.com/tamaspiros/angularchat</a></p>
+    <p>If you'd like to read more about the project please check out this article: <a href="http://wiki.nodeunify.com/">http://wiki.nodeunify.com/</a></p>
+    <p>If you're interested in the code behind this project, please go to: <a href="https://github.com/hypercloud/AngularChat" target="_blank">https://github.com/hypercloud/AngularChat</a></p>
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning btn-sm cancel" ng-click="cancel()">Cancel</button>
